feat: implementa exploração de categorias da dublapedia
